# NoteSharing

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
backend/: .env.example  .secrets.baseline  pyproject.toml
backend/app/: asgi.py  main.py
backend/app/api/: dependencies.py  health.py  middleware.py  spa.py
backend/app/api/routes/: __init__.py  auth.py  notes.py
backend/app/core/: auth.py  config.py  constants.py  exceptions.py  jwk.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  firestore.py  sqlite.py
backend/app/jobs/: __init__.py
backend/app/repositories/: firestore_note.py  firestore_user.py  protocols.py  sqlite_note.py  sqlite_user.py
backend/app/schemas/: note.py  requests.py  responses.py  user.py
backend/app/services/: auth_service.py  note_service.py
backend/scripts/: export_openapi.py
backend/tests/: test_datastore_container.py  test_security.py
backend/tests/integration/: conftest.py  test_auth_api.py  test_notes_api.py
backend/tests/unit/: test_schemas.py  test_security.py
frontend/: .env.example  eslint.config.js  openapi.json  orval.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/api/: fetch-instance.ts  generated.ts
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  NoteBadges.tsx
frontend/src/components/ui/: checkbox.tsx  sonner.tsx
frontend/src/hooks/: useAuth.tsx  useNoteAccess.ts  useNoteDelete.ts
frontend/src/lib/: error.ts  query-client.ts
frontend/src/pages/: CreateNotePage.tsx  LoginPage.tsx  MyNotesPage.tsx  ViewNotePage.tsx
infra/acc/: .env.example  backend.tf  main.tf
infra/modules/environment/: main.tf  outputs.tf  variables.tf
infra/prod/: .env.example  backend.tf  main.tf
infra/shared/: backend.tf  main.tf  variables.tf
